Rename receiver to project
