# pkg/api/v1/log.go
@@ -12,13 +12,13 @@ type swaggerLogOptions struct {
 
 // swagger:model
 type Log struct {
-	ID         int64     `json:"id"`
-	ReceiverID int64     `json:"receiver_id"`
-	AlertID    int64     `json:"alert_id"`
-	Username   string    `json:"username"`
-	Comment    string    `json:"comment"`
-	CreatedAt  time.Time `json:"created_at"`
-	UpdatedAt  time.Time `json:"updated_at"`
+	ID        int64     `json:"id"`
+	ProjectID int64     `json:"project_id"`
+	AlertID   int64     `json:"alert_id"`
+	Username  string    `json:"username"`
+	Comment   string    `json:"comment"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
 
 type Logs struct {
