# pkg/server/alertmanager.go
@@ -4,7 +4,6 @@ import (
 	"net/http"
 
 	"github.com/incidenta/incidenta/pkg/alertmanager"
-	"github.com/incidenta/incidenta/pkg/models"
 )
 
 // swagger:route POST /v1/alertmanager/webhook Alertmanager AlertmanagerWebhook
@@ -19,13 +18,6 @@ func (h *HTTPServer) AlertmanagerWebhookRequest(_ http.ResponseWriter, r *http.R
 	message, err := alertmanager.ParseMessage(r)
 	if err != nil {
 		return Error(400, "Bad Request", err)
-	}
-	_, err = models.GetReceiverByName(message.Receiver)
-	if err != nil {
-		if models.IsErrReceiverNotExist(err) {
-			return Error(404, "Not Found", nil)
-		}
-		return Error(500, "Internal Server Error", err)
 	}
 	return JSON(201, map[string]int{
 		"count": len(message.Alerts()),
